# AksCustomAutoscaler

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
src/: scale.py
tests/: test.py
